<resources>
    <string name="app_name" translatable="false">Anti Sihr</string>
    <string name="name_app">Anti Sihr</string>
    <string name="tests">Тесты</string>
    <string name="not">Нет</string>
    <string name="score">Результат %1$s</string>
    <string name="your_name">Ваше имя:</string>
    <string name="more">Подробнее</string>
    <string name="donot_have_featured_articles">У вас нету выбранных статьи</string>
    <string name="our_adress">Наш адрес:</string>
    <string name="info_collected_here">Здесь собранная информация</string>
    <string name="city_name">Название города…</string>
    <string name="authorization">Авторизация…</string>
    <string name="error_connecting_server">Ошибка при соединений с сервером</string>
    <string name="name_of_your_question">Название вашего вопроса:</string>
    <string name="no_errors">Без ошибок</string>
    <string name="are_you_looking_for_reader">Вы ищите чтеца?</string>
    <string name="enter_something_you_want">Введите текст</string>
    <string name="all_rights_reserved">Все права защищины</string>
    <string name="to_favourites">В избранное</string>
    <string name="sending_data">Данные отправляются…</string>
    <string name="volume">Звук: </string>
    <string name="ready">Сохранить</string>
    <string name="favourites">Избранные</string>
    <string name="error_while_receving_data_from_server">Ошибка при получений данных их сервера</string>
    <string name="take_cure_at_the_library">Перейти к лечению</string>
    <string name="feedback">Обратная связь</string>
    <string name="score_with_dots">Результат: %1$s</string>
    <string name="question_title_and_description_are_required_to_submit_ticket">Тема и описание не должны быть пустыми чтобы отправить заявку</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="library">Библиотека</string>
    <string name="privacy_policy">Политика конфеденциальности</string>
    <string name="lets_identify_signs">Позволит выявить признаки</string>
    <string name="description">Описание: %1$s</string>
    <string name="buy">Купить</string>
    <string name="en">ru</string>
    <string name="the_choosen_ones">Выбранные</string>
    <string name="get_treated">Пройти лечение</string>
    <string name="rub">%s рубль.</string>
    <string name="close">Закрыть</string>
    <string name="your_phone_number">Ваш телефон: %1$s</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="loading_data">Загрузка данных…</string>
    <string name="audio">Аудио</string>
    <string name="no_data">Нету данных</string>
    <string name="full_name">Ваше полное имя</string>
    <string name="error_fetching_data">Ошибка при получении данных</string>
    <string name="the_best_cure_is_what_you_read_to_yourself.">Самое лучшее это то что вы читаете.</string>
    <string name="address_with_dots">Адрес: %1$s</string>
    <string name="in_every_city_one_reader">В каждом городе по одному чтецу</string>
    <string name="about">О приложении</string>
    <string name="phone_number">Телефон номер: %1$s</string>
    <string name="done">Сохранить</string>
    <string name="yes">Да</string>
    <string name="all">Все</string>
    <string name="only_selected_articles_are_displayed_here">Только выбранные статьи видны здесь</string>
    <string name="refresh">Обновить</string>
    <string name="name">Имя</string>
    <string name="readers">Чтецы</string>
    <string name="further">Далее</string>
    <string name="search">Поиск</string>
    <string name="telephone_only">Телефон:</string>
    <string name="update">Обновление…</string>
    <string name="authorization_required">Авторизация обязательна</string>
    <string name="send">Отправить</string>
    <string name="all_the_data_you_enter_is_strictly_confidential">Все введенные вами данные\nстрого конфиденциальны</string>
    <string name="error">Ошибка</string>
    <string name="capacity">Объем</string>
    <string name="language">Язык</string>
    <string name="shop">Магазин</string>
    <string name="about_app">О приложении</string>
    <string name="name_anti">Anti</string>
    <string name="name_sihr">Sihr</string>
    <string name="send">Отправить</string>
    <string name="save">Сохранить</string>
    <string name="to_saved">В избранное</string>
    <string name="test_word">[Эта сура] - сообщение о милости Господа твоего рабу Его Закарии, (2) когда он воззвал к своему Господу тайно, (3) воскликнув: \"Господи! Воистину, кости мои иссыхают, и заблистала [уже] голова сединой. А помню, раньше мольбы мои к Тебе, Господи, не оставались без ответа. .  Воистину, я опасаюсь [поведения] моих родственников после моей [смерти], ведь жена моя бесплодна. Даруй же мне наследника Своей милостью, (5) который наследует и мне, и роду Йа\'куба, и сделай его, Господи, угодным [Тебе]\". (6) [Раздался глас]: \"О Закариййа! Воистину, Мы радуем тебя вестью о мальчике, имя которому Йахйа. Мы не порождали прежде кого-либо с этим именем\". (7) [Закариййа] воскликнул: \"Господи! Как может быть у меня мальчик, в то время как моя жена бесплодна, а я немощен от старости?\" (8) [Джибрил сказал]: \"Так решил твой Господь: \"Это для Меня не представляет труда. Ведь Я сотворил тебя до этого, хотя ты и был ничем\"\". (9) [Закариййа] сказал: \"Господи! Укажи мне знамение\". Он ответил: \"Знамение для тебя состоит в том, чтобы не говорить с людьми три ночи [и дня], не будучи лишенным дара речи\". (10) [Закариййа] вышел из алтаря к своим людям и дал им понять [жестами]: \"Славьте [Господа] утром и вечером\". (11)requirements and you know what we are searching for.  Thanks!</string>
    <string name="favorites">Избранное</string>
    <string name="city_name">Название города</string>
    <string name="buy">Купить</string>
    <string name="shop_name">Магазин:</string>
    <string name="capacity">Объем:</string>
    <string name="description">Описание:</string>
    <string name="search">Поиск</string>
    <string name="bookmarked">Избранные</string>
    <string name="only_bookmarkeds">Тут отображаются только избранные статьи</string>
    <string name="all">Все</string>
    <string name="russian">Русский</string>
    <string name="text_en">Английский</string>
    <string name="text_ja">Японский</string>
    <string name="text_sv">Шведский</string>
    <string name="text_fr">Французский</string>
    <string name="text_tr">Турецкий</string>
    <string name="text_de">Немецкий</string>
    <string name="text_ko">Корейский</string>
    <string name="text_zh">Китайский</string>
    <string name="text_it">Итальянский</string>
    <string name="text_es">Испанский</string>
    <string name="text_ar">Арабский</string>
    <string name="text_ru">Русский</string>
</resources>
