<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info"
        android:title="@string/about_app" />
    <item
        android:id="@+id/privacy_policy"
        android:icon="@drawable/ic_globe"
        android:title="@string/privacy_policy"
        android:titleCondensed="@string/privacy_policy"/>

    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback" />

    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_globe"
        android:title="@string/language" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_app" />
</menu>