<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/tv_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_close" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/close"
            android:textColor="@color/blue"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_saved"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/nunito_ttf"
            android:text="@string/to_saved"
            android:textColor="#66000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_favourites"
            app:layout_constraintStart_toEndOf="@id/ic_favourites"
            app:layout_constraintTop_toTopOf="@id/ic_favourites" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nunito_extrabold_ttf"
            android:textColor="@color/main_text_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_close"
            tools:text="Воздействие рукия над больным" />

        <View
            android:id="@+id/divider_first"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="#E5E5E5"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_semibold_ttf"
            android:text="Ибн аль Каййим говорит, что рукия опирается на две вещи: Сила воли и упование на Всевышнего Аллаха. Это необходимо как для больного так и для читающего рукии."
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/divider_first" />

        <TextView
            android:id="@+id/tv_body_arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nunito_semibold_ttf"
            android:text="قَالَ رَبِّ إِنِّي وَهَنَ الْعَظْمُ مِنِّي وَاشْتَعَلَ الرَّأْسُ شَيْبًا وَلَمْ أَكُن بِدُعَائِكَ رَبِّ شَقِيًّا"
            android:textColor="#774FDC"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tv_body" />

        <TextView
            android:id="@+id/tv_body_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="19:3"
            android:textColor="#66000000"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tv_body_arabic"
            app:layout_constraintTop_toBottomOf="@id/tv_body_arabic" />

        <View
            android:id="@+id/divider_second"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="#E5E5E5"
            app:layout_constraintTop_toBottomOf="@id/tv_body_number" />

        <TextView
            android:id="@+id/tv_body_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_semibold_ttf"
            android:text="@string/test_word"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/divider_second"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>